--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer {
   <h1>Welcome To My Website</h1>
     <nav>
       <ul>
-        <li><a href="about me.html">ABOUT ME</a></li>
+        <li><a class="active" href="about me.html">ABOUT ME</a></li>
         <li><a href="C:\Users\hi\Documents\MY WESBITE\family.html">FAMILY</a></li>
         <li><a href="C:\Users\hi\Documents\MY WESBITE\friends.html">FRIENDS</a></li>
         <li><a href="C:\Users\hi\Documents\MY WESBITE\education.html">EDUCATION</a></li> 
