--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@ footer {
   <h1>Welcome To My Website</h1>
     <nav>
       <ul>
-        <li><a class="active" href="about me.html">ABOUT ME</a></li>
-        <li><a href="C:\Users\hi\Documents\MY WESBITE\family.html">FAMILY</a></li>
-        <li><a href="C:\Users\hi\Documents\MY WESBITE\friends.html">FRIENDS</a></li>
-        <li><a href="C:\Users\hi\Documents\MY WESBITE\education.html">EDUCATION</a></li> 
-        <li><a href="C:\Users\hi\Documents\MY WESBITE\experiences.html">EXPERIENCES</a></li>
+        <li><a href="about me.html">ABOUT ME</a></li>
+        <li><a href="family.html">FAMILY</a></li>
+        <li><a href="friends.html">FRIENDS</a></li>
+        <li><a href="education.html">EDUCATION</a></li> 
+        <li><a href="experiences.html">EXPERIENCES</a></li>
       </ul>
     </nav>
 </header>
@@ -142,13 +142,16 @@ footer {
 <div class="social-links">
     <center>
     <a href="https://www.tiktok.com/@sheissofea_?_t=ZS-8sqAHxfnSFE&_r=1">
-        <img src="c:\Users\hi\Documents\MY WESBITE\tiktok logo.jpg" alt="TikTok" >
+        <img src="tiktok logo.jpg" alt="TikTok" >
     </a>
     <a href="https://t.me/sofeashahrom target=">
-        <img src="c:\Users\hi\Documents\MY WESBITE\telegram logo.jpg" alt="Telegram">
+        <img src="telegram logo.jpg" alt="Telegram">
     </a>
     <a href="https://www.instagram.com/zarithhsofea_/profilecard/?igsh=MWtkbWZmemZxZGJ5aA==">
-        <img src="c:\Users\hi\Documents\MY WESBITE\instagram logo.jpg" alt="Instagram">
+        <img src="instagram logo.jpg" alt="Instagram">
+    </a>    
+    <a href="mailto:zarithsofeashahrom@gmail.com">
+        <img src="gmail logo.jpg">
     </a>
     </center>
   </div>
