--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ footer {
 
 <marquee><h4><font color="purple">Hello </font>I'm SOFEA</h4></marquee>
 
-<center><img src="c:\Users\hi\Documents\MY WESBITE\header.jpg" border="3"></center>
+<center><img src="header.jpg" border="3"></center>
 
 <div class="home-container">
     <p><font size="5">Welcome to my website. A place where you can get to know me.There is a lot of thing that you can find in this website.<br>For example, my background, education level and my experiences through out my life.</font></p>
