--- a/about me.html
+++ b/about me.html
@@ -83,16 +83,16 @@ footer {
  <!-- Profile Images -->
 <center>
     <div class="profile-images">
-        <img src="c:\Users\hi\Documents\MY WESBITE\picture1.jpg" alt="picture 1">
-        <img src="c:\Users\hi\Documents\MY WESBITE\picture 3.jpg" alt="picture 3">
-        <img src="c:\Users\hi\Documents\MY WESBITE\picture 2.jpg" alt="picture 2">
+        <img src="picture1.jpg" alt="picture 1">
+        <img src="picture 3.jpg" alt="picture 3">
+        <img src="picture 2.jpg" alt="picture 2">
     </div></center>
 
 <center><h3>&#127900; You can listen to my favorite song below while reading my profile. &#127900;</h3></center><br>
 
 <center><audio controls autoplay>
     <source src="Reminisensi.ogg" type="audio/ogg">
-    <source src="c:\Users\hi\Documents\MY WESBITE\Insomniacks - Reminisensi (Lirik Video).mp3" type="audio/mpeg">
+    <source src="Insomniacks - Reminisensi (Lirik Video).mp3" type="audio/mpeg">
     </audio></center>
 <center><h4><font color="blue">&#127926; Reminisensi</font> by Insomniacks &#127926;</h4></center>
 
@@ -105,7 +105,7 @@ footer {
             Also, I am a huge fan of green color. Most of my stuff is green and I own 5 green stockins!</font></font></pre>
 </div>
 
-<center><img src="c:\Users\hi\Documents\MY WESBITE\header 2.jpg" border="3"></center>
+<center><img src="header 2.jpg" border="3"></center>
 
 <div class="biodata-container">
     <h1>MY<font color = "maroon"> FAVOURITE</font> QOUTE</h1>
@@ -114,7 +114,7 @@ footer {
 </div>
 
 <center>
-<a href="c:\Users\hi\Documents\MY WESBITE\index.html" class="back-button">Back Home</a>
+<a href="index.html" class="back-button">Back Home</a>
 </center>
 <br>
 
