--- a/experiences.html
+++ b/experiences.html
@@ -150,7 +150,7 @@ footer {
     </div>
     
     <center>
-      <a href="c:\Users\hi\Documents\MY WESBITE\index.html" class="back-button">Back Home</a>
+      <a href="index.html" class="back-button">Back Home</a>
       </center>
       <br>
 
