--- a/family.html
+++ b/family.html
@@ -134,7 +134,7 @@ footer {
 
 <center><audio controls autoplay>
     <source src="Blue.ogg" type="audio/ogg">
-    <source src="c:\Users\hi\Documents\MY WESBITE\yung kai - blue (Official Music Video).mp3" type="audio/mpeg">
+    <source src="yung kai - blue (Official Music Video).mp3" type="audio/mpeg">
   </audio></center>
 <h4>&#127900; <font color="blue">Blue</font> by Yung Kai &#127900;</h4>
 
@@ -144,7 +144,7 @@ footer {
 <div class="ibuayah">
 <table border="5">
     <tr>
-        <td> <img src="c:\Users\hi\Documents\MY WESBITE\ibuayah.jpg" width="650" height="500" </td>
+        <td> <img src="ibuayah.jpg" width="650" height="500" </td>
         <td> <center><font size="10">This is<font color="red"> My Parent!</font></font><br> 
             - My dads name is Shahrom Bin Ayop. <br>
             - My Mums name is Wan Noraini Binti Wan Mamat. </center>
@@ -157,8 +157,8 @@ footer {
 
 <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="c:\Users\hi\Documents\MY WESBITE\kakak.jpg">
-        <img src="c:\Users\hi\Documents\MY WESBITE\kakak.jpg" alt="Sister">
+      <a target="_blank" href="kakak.jpg">
+        <img src="kakak.jpg" alt="Sister">
       </a>
       <div class="desc"><b>FATIN THAQIFFAH</b><br>This is my older sister.<br>She was born on 1997</div>
     </div>
@@ -166,8 +166,8 @@ footer {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="c:\Users\hi\Documents\MY WESBITE\abang.jpg">
-        <img src="c:\Users\hi\Documents\MY WESBITE\abang.jpg" alt="Older Brother">
+      <a target="_blank" href="abang.jpg">
+        <img src="abang.jpg" alt="Older Brother">
       </a>
       <div class="desc"><b>LUQMAN HAKIM</b><br>This is my older brother.<br>He was born on 2001.</div>
     </div>
@@ -175,8 +175,8 @@ footer {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="c:\Users\hi\Documents\MY WESBITE\balqis.jpg">
-        <img src="c:\Users\hi\Documents\MY WESBITE\balqis.jpg" alt="Myself">
+      <a target="_blank" href="balqis.jpg">
+        <img src="balqis.jpg" alt="Myself">
       </a>
       <div class="desc"><b>ZARITH SOFEA</b><br>This is me.<br>I was born on 2004.</div>
     </div>
@@ -184,8 +184,8 @@ footer {
   
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="c:\Users\hi\Documents\MY WESBITE\rafiq.jpg">
-        <img src="c:\Users\hi\Documents\MY WESBITE\rafiq.jpg" alt="Younger Brother">
+      <a target="_blank" href="rafiq.jpg">
+        <img src="rafiq.jpg" alt="Younger Brother">
       </a>
       <div class="desc"><b>RAFIQ ILHAM</b><br>This is my yourger brother.<br>He was born on 2008.</div>
     </div>
@@ -195,7 +195,7 @@ footer {
 <br>
 
 <center>
-  <a href="c:\Users\hi\Documents\MY WESBITE\index.html" class="back-button">Back Home</a>
+  <a href="index.html" class="back-button">Back Home</a>
   </center>
   <br>
 
