--- a/friends.html
+++ b/friends.html
@@ -100,8 +100,8 @@ footer {
 
 <center><h3>&#127900; You can listen to this song below while seeing my gallery. &#127900;</h3></center>
 <center><video width="500" height="300" controls>
-    <source src="c:\Users\hi\Documents\MY WESBITE\1736174351.9953523_ytshorts.savetube.me.mp4" type="video/mp4">
-    <source src="c:\Users\hi\Documents\MY WESBITE\1736174351.9953523_ytshorts.savetube.me.mp4" type="video/ogg">
+    <source src="1736174351.9953523_ytshorts.savetube.me.mp4" type="video/mp4">
+    <source src="1736174351.9953523_ytshorts.savetube.me.mp4" type="video/ogg">
   </video></center>
   <center><h4><font color="#f542a4">&#127926; Sahabat</font> by Najwa Latif ft. SleeQ & Syam Kamarul &#127926;</h4></center>
 
@@ -109,42 +109,42 @@ footer {
 
 <div class="row">
     <div class="column">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f2.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f11.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f21.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f23.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f13.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f16.jpg">
+      <img src="f2.jpg">
+      <img src="f11.jpg">
+      <img src="f21.jpg">
+      <img src="f23.jpg">
+      <img src="f13.jpg">
+      <img src="f16.jpg">
     </div>
     
     <div class="column">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f7.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f5.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\friend1.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f14.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f15.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\friend4.jpg">
+      <img src="f7.jpg">
+      <img src="f5.jpg">
+      <img src="friend1.jpg">
+      <img src="f14.jpg">
+      <img src="f15.jpg">
+      <img src="friend4.jpg">
     </div>
     <div class="column">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f18.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f10.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f9.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f8.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f12.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f17.jpg">
+      <img src="f18.jpg">
+      <img src="f10.jpg">
+      <img src="f9.jpg">
+      <img src="f8.jpg">
+      <img src="f12.jpg">
+      <img src="f17.jpg">
     </div>
     <div class="column">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\friend2.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f6.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f19.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f22.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f20.jpg">
-      <img src="c:\Users\hi\Documents\MY WESBITE\friends folder\f4.jpg">
+      <img src="friend2.jpg">
+      <img src="f6.jpg">
+      <img src="f19.jpg">
+      <img src="f22.jpg">
+      <img src="f20.jpg">
+      <img src="f4.jpg">
     </div>
 </div>
 
 <center>
-  <a href="c:\Users\hi\Documents\MY WESBITE\index.html" class="back-button">Back Home</a>
+  <a href="index.html" class="back-button">Back Home</a>
   </center>
   <br>
 
